# epics-pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  add_trailing_newline.sh  setup.cfg
epics_pre_commit_hooks/: add_trailing_blank_line_fixer.py
pre_commit_hooks/: add_trailing_blank_line_fixer.py  add_trailing_newline.py
tests/: test_add_trailing_blank_line.py  test_add_trailing_newline.py
