[metadata]
name = pre_commit_hooks
version = 0.1.4
description = Hooks for pre-commit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anderslindho/pre-commit-hooks
author = Anders Lindh Olsson
author_email = anders.lindh.olsson@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    add-trailing-blank-line = epics_pre_commit_hooks.add_trailing_blank_line_fixer:main

[bdist_wheel]
universal = True

